# stringpy

./: .gitignore  .readthedocs.yaml  Cargo.toml  LICENSE  Makefile  README.md  README.qmd  pyproject.toml
.github/workflows/: CI.yml  build.yml  cov.yml
docs/: API.rst  README.rst  conf.py  index.rst
python/stringpy/: __init__.py  utils.py
src/: arrow_in.rs  atomic.rs  error.rs  lib.rs  str.rs  utils.rs
tests/unit/: test_string.py
