[package]
name = "_stringpy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_stringpy"
crate-type = ["cdylib"]


[dependencies]
pyo3 = "0.18.1"
arrow2 = {version =  "0.17.0", features = ["compute_regex_match", "compute_utf8", "compute_concatenate"]}
regex = "1.7.3"
unidecode = "0.3.0"
